--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Thalman Thilak - Blog</title>
-</head>
-<body>
-    <h1>Thalman Thilak - Blog</h1>
-    <p>Product Manager | Rollout Specialist | AI Enthusiast</p>
-    <p>Welcome to my blog! Content coming soon.</p>
-</body>
-</html>
+---
+layout: home
+---
+
+<div style="text-align: center; margin-bottom: 2rem;">
+  <h1>Thalman Thilak - Blog</h1>
+  <p>Product Manager | Rollout Specialist | AI Enthusiast</p>
+</div>
+
+<div class="posts">
+  {% for post in site.posts %}
+    <article style="margin-bottom: 2rem; padding: 1rem; border: 1px solid #ddd;">
+      <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+      <p><small>{{ post.date | date: "%B %d, %Y" }}</small></p>
+      <p>{{ post.excerpt }}</p>
+    </article>
+  {% endfor %}
+</div>
