--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
 <div class="posts">
   {% for post in site.posts %}
     <article style="margin-bottom: 2rem; padding: 1rem; border: 1px solid #ddd;">
-      <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+      <h2><a href="{{ post.url | relative_url }}">{{ post.title }}</a></h2>
       <p><small>{{ post.date | date: "%B %d, %Y" }}</small></p>
       <p>{{ post.excerpt }}</p>
     </article>
